test/files/neg/abstract-concrete-methods.check
abstract-concrete-methods.scala:7: error: class Outer2 needs to be abstract. Missing implementation for:
  def score(i: Outer2#Inner): Double // inherited from trait Outer
(Note that This#Inner does not match Outer2#Inner: class Inner in class Outer2 is a subclass of trait Inner in trait Outer, but method parameter types must match exactly.)
class Outer2 extends Outer[Outer2] {
      ^
one error found
